<resources>
    <string name="app_name">SimpleNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">818657705738670</string>
    <string name="fb_login_protocol_scheme">fb818657705738670</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_win">Новый пункт</string>
    <string name="title">Название для загаловка</string>
    <string name="enterTitle">Введите название</string>
    <string name="content">Содержимое</string>
    <string name="enterContent">Введите запись</string>
    <string name="inputError">Пустое поле \"Название\" или \"Описание\"</string>
    <string name="detailError">Ошибка-нет данных</string>
    <string name="addNoteName">+</string>
    <string name="textForTitle">Название</string>
    <string name="textForContent">Запись</string>
    <string name="hint_search">Поиск</string>
    <string name="MainTitle">Записи</string>
    <string name="oneTitle">Запись</string>
    <string name="sortable">Сортировать по:</string>
    <string name="underline"><u>Подчеркивание</u></string>
    <string name="fontSettings">Настройки шрифта</string>
    <string name="save">Сохранить</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="premium">Подписка</string>
    <string name="givePremiunAcount">Что дает Подписка</string>
    <string name="buy_premium">Купить</string>
    <string name="enterAuth">Войти</string>
    <string name="userExist">Пользователь уже существует</string>
    <string name="handle_faulure">Сбой обработки</string>
    <string name="enterEmail">Введите email</string>
    <string name="successSingInGoogle">Успешная авторизация</string>
    <string name="successHandleGoogle">Успешно подключение к google</string>
    <string name="errorHandleGoogle">Сбой подключения</string>
    <string name="errorSingInGoogle">Ошибка авторизации</string>
    <string name="politic">Политика конфиденциальности</string>
    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="exit">Выход</string>
    <string name="FolderTitle">Папки</string>
    <string name="ifEmptyNote">Здесь будут находится ваши записи</string>
    <string name="ifEmptyFolder">Здесь будут находится ваши папки</string>
    <string name="isEmptyNoteOfFolder">Здесь будут находится записи данной папки</string>
    <string name="settings">Настройки</string>
    <string name="g_main">На главную</string>
    <string name="checkBoxNoDelete">Не удалять из облака при появления доступа к облаку, которые были удаленны из приложения</string>
    <string name="noLoadNote">Не загружать данные в облаку</string>
    <string name="cleanNote">Удалить</string>
    <string name="contentCleanNote">Удалить папки и записи</string>
    <string name="cleanFirebase">Удалить все папки с записями из облака</string>
    <string name="sizeTitle">Размер заголовка</string>
    <string name="uploadFromFirebase">Переписать папки и записи в облаке</string>
    <string name="downloadFromFirebase">Загрузить из облака</string>
    <string name="sizeContent">Размер записи</string>
    <string name="Folder">Папки</string>
    <string name="styleText">Стиль текcта</string>
    <string name="register">Регистрация</string>
    <string name="descSimple">или просто</string>
    <string name="enter">Войти</string>
    <string name="politicAndDesc">Продолжая, вы соглашаетесь <a style="color:#ffffff" href="https://confidentiality.refsite.ru"><b>Усвовия Использования</b></a> и <a href="https://useragreement.refsite.ru"><b>Политика Конфиденциальности</b></a></string>
    <string name="enterEmailPassword">Войти через email</string>
    <string name="cleanFirebaseDesc">В данном случае удаляться папки с записями, которые относитилсь к разделу папок.</string>
    <string name="checkBoxNoUpdate">Не редактировать в облаке при появления доступа к облаку, которые были отредактированы из приложения</string>
    <string name="checkBoxMainNoDelete">Не удалять из облака (когда появится доступ к облаку) записи, которые были удалены без доступа к облаку</string>
    <string name="checkBoxMainNoUpdate">Не редактировать в облаке (когда появится доступ к облаку) записи, которые были отредактированы без доступа к облаку</string>
    <string name="cleanMainFirebase">Очистить облако от записей</string>
    <string name="cleanMainFirebaseDesc">В данном случае очиститься облако, в котором храняться только записи.</string>
    <string name="continue_premium">Продолжить</string>
    <string name="donate">Донат</string>
    <string name="load_product">Загрузить</string>
    <string name="price">Цена</string>
    <string name="desc">Описание</string>
    <string name="allNoteOfFolders">Показать все записи папок</string>
    <string name="cleanDatabase">Удалить все папки с записями с телефона</string>
    <string name="cleanDatabaseDesc">В данном случае удалься папки с записями с телефона</string>
    <string name="buy_premium_two_month">купить на два месяца</string>
    <string name="subs">Подписка</string>
    <string name="textForReloadSubs">Если по каким-то причинам еще купленная подписка не загружается, то ее можно обновить для приложения</string>
    <string name="reload">Продлить</string>
    <string name="reloadInApp">Перезагрузить покупку</string>
    <string name="textForReloadInApp">Если по каким-то причинам покупка на два месяца не появилась или же была переустановка приложения.</string>
    <string name="descForInAppNotify">Подписка истекает через день</string>
    <string name="no">Нет</string>
    <string name="isDeleteNote">Вы точно хотите удалить запись?</string>
    <string name="isDeleteCloudOnlyNote">Точно хотите очистить облако с записями?</string>
    <string name="isDeleteCloudNoteOfFold">Точно хотите очистить облако папки с записями?</string>
    <string name="dontAccessCloud">Нет доступа к облаку</string>
    <string name="ok">OK</string>
    <string name="yes">Да</string>
    <string name="isDeleteFoldOnPhone">Точно хотите очистить телефона папки с записями?</string>
    <string name="delete">Удалить</string>
    <string name="isDeleteFod">Удалить папку?</string>
    <string name="clear">Понятно</string>
    <string name="sendDataCloud">\"Данные отправляются в облако\"</string>
    <string name="sendData">Отправка данных</string>
    <string name="make">Создать</string>
    <string name="enterNameFold">Введите название папки</string>
    <string name="console">Отмена</string>
    <string name="subsOverDay">Подписка истекает через день</string>
    <string name="overInAp">Истечение покупки</string>
    <string name="forbidden">Запрещено</string>
    <string name="cantDeleteInFoldOfNote">Удалить папку нельзя, в папке есть еще записи!</string>
    <string name="loadDataCloud">Загрузить данные из облака?</string>
    <string name="forseUploadCload">Принудительно выгрузить данные в облако?</string>
    <string name="loadIsDeleteOnCloud">В данном случае выгружаются на сервер те данные, которые вы возможно удалили из другого устройства, в том числе некоторые записи могут быть перезаписаны</string>
    <string name="disAds">Отключить рекламу</string>
    <string name="subsIs">Подписка уже есть</string>
    <string name="subsIssued">Подписка оформлена</string>
    <string name="erroLoad">Ошибка загрузки</string>
    <string name="noReadSubs">Еще не готова подписка</string>
    <string name="canselInApp">Отмена покупки</string>
    <string name="error">Ошибка</string>
    <string name="succesConnect">Успешное соединение</string>
    <string name="textForReloadInAppAndSubs">Перезагрузить покупку или подписку</string>
    <string name="reloadInAp">Обновить покупку</string>
    <string name="reloadSubs">Обновить подписку</string>
    <string name="listSubs">Список</string>
    <string name="repeatOne">Попробуйте еще раз!</string>
    <string name="successly">Успешно</string>
    <string name="errorConnectServer">Ошибка соединение с сервером</string>
    <string name="successConnectServer">Успешное соединение</string>
    <string name="errorConnect">Ошибка соединения</string>
    <string name="productIsPurchase">Товар успешно куплен</string>
    <string name="cansolePurchase">Отмена покупки</string>
    <string name="errorLoad">Ошибка загрузки</string>
    <string name="subsIsNoReady">Еще не готова подписка</string>
    <string name="subs_purchase">Подписка оформлена</string>

</resources>