<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/go_main"
        android:orderInCategory="100"
        android:title="@string/g_main"
        app:showAsAction="never" />
    <item
        android:id="@+id/upload"
        android:orderInCategory="100"
        android:icon="@mipmap/cloud_sync_upload"
        android:title="@string/uploadFromFirebase"
        app:showAsAction="never" />
    <item
        android:id="@+id/download"
        android:orderInCategory="100"
        android:icon="@mipmap/cloud_sync_download_round"
        android:title="@string/downloadFromFirebase"
        app:showAsAction="never" />
    <item
        android:id="@+id/shoAllNoteOfFolders"
        android:orderInCategory="100"
        android:icon="@mipmap/cloud_sync_download_round"
        android:title="@string/allNoteOfFolders"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/hint_search"
        app:itemIconTint="@color/colorTheme"
        app:itemTextColor="@android:color/primary_text_dark"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

</menu>