<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/menu1" android:checkableBehavior="single">
        <item
            android:id="@+id/premium"
            android:icon="@drawable/premium"
            android:title="@string/premium" />

        <item
            android:id="@+id/exit"
            android:icon="@drawable/exit"
            android:title="@string/exit" />
    </group>
    <group android:id="@+id/menu2" android:checkableBehavior="single">
        <item
            android:id="@+id/politic"

            android:title="@string/politic" />
        <item
            android:id="@+id/userAgreement"

            android:title="@string/userAgreement" />
    </group>
</menu>