<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/go_main"
    android:orderInCategory="100"
    android:title="@string/g_main"
    app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/hint_search"
        app:itemIconTint="@color/colorTheme"
        app:itemTextColor="@android:color/primary_text_dark"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

</menu>