<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivitySettings">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <CheckBox
            android:id="@+id/checkBoxDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxMainNoDelete"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="53dp"
            tools:ignore="MissingConstraints" />
        <CheckBox
            android:id="@+id/checkBoxUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/checkBoxMainNoUpdate"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="53dp"
            tools:ignore="MissingConstraints" />
        <Button
            android:id="@+id/saveSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/cleanMainFirebase"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cleanMainFirebaseDesc"
            />
        <Button
            android:id="@+id/cleanFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:text="@string/cleanNote" />



    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>