<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    tools:ignore="RtlSymmetry">
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/givePremiunAcount">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toRightOf="@+id/category"
            android:layout_gravity="center"
            app:tint="@color/white"
            android:background="@drawable/back_for_folder"
            android:src="@android:drawable/ic_input_add"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/disAds" /></LinearLayout>

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <Button
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_marginTop="15dp"
        android:background="@drawable/back_for_folder"
        android:textColor="@color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/subs" />
    <Button
    android:id="@+id/inApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="0"
    android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
    android:background="@drawable/back_for_folder"
    android:textColor="@color/white"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:text="@string/buy_premium_two_month" />
</GridLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textForReloadSubs"
            />
        <Button
            android:id="@+id/reloadSubs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/back_for_folder"
            android:textColor="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/reload" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textForReloadInApp"
            />
        <Button
            android:id="@+id/reloadInApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/back_for_folder"
            android:textColor="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/reloadInApp" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>