<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/b6effb4">


    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="50sp"
        android:text="@string/app_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints">
    </TextView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginTop="80dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/appName" />


      <Button
        android:id="@+id/email_assword_login_button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@xml/button_bg_email_password"
        android:text="@string/enterEmailPassword"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"

        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/simple"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/descSimple"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_assword_login_button"
        >

    </TextView>
    <Button
        android:id="@+id/simple_enter"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple"
        android:text="@string/enter"
        android:layout_centerInParent="true"
        android:radius="3dp"
        tools:ignore="MissingClass,MissingConstraints" />
    <TextView
        android:id="@+id/enterText"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simple_enter"
        />


</androidx.constraintlayout.widget.ConstraintLayout>